packages/react-server/examples/basic/src/routes/test/error/use-server/page.tsx
export default function Page() {
  return <form action={() => {}}>Boom!</form>;
}
